fixing logo margin on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   background: url('../images/logo-v3-gray-35h.png') no-repeat;
   width: 125px;
   height: 35px;
-  margin-left: 0;
+  margin-left: 15px;
   margin-top: 6px;
   margin-right: 15px;
 }
@@ -314,6 +314,9 @@ footer ul>li:last-child {
   margin-top: 0;
 }
 @media (min-width: 768px) {
+  .navbar > .container .navbar-brand {
+    margin-left: 0;
+  }
   .jumbotron h1 {
     font-size: 75px;
     letter-spacing: -3px;
